applications/invidious/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invidious
spec:
  selector:
    app: invidious
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
