applications/invidious/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: invidious-invidious-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - invidious.tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: invidious.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invidious
                port:
                  number: 80
